# CodeCompare

./: .gitignore  BuildCompileLine.cpp  BuildCompileLine.h  BuildEchoLine.h  BuildElement.cpp  BuildElement.h  BuildElementSet.cpp  BuildElementSet.h  BuildForLine.h  BuildLNLine.cpp  BuildLNLine.h  BuildLine.cpp  BuildLine.h  BuildLineARDisplayForm.cpp  BuildLineARDisplayForm.h  BuildLineBaseDisplayForm.cpp  BuildLineBaseDisplayForm.h  BuildLineDisplayForm.cpp  BuildLineDisplayForm.h  BuildLineDisplayFormControls.cpp  BuildLineDisplayFormControls.h  BuildLineEchoDisplayForm.cpp  BuildLineEchoDisplayForm.h  BuildLineForDisplayForm.cpp  BuildLineForDisplayForm.h  BuildLineGCCDisplayForm.cpp  BuildLineGCCDisplayForm.h  BuildLineLNDisplayForm.cpp  BuildLineLNDisplayForm.h  BuildLineRanlibDisplayForm.cpp  BuildLineRanlibDisplayForm.h  BuildLineSet.cpp  BuildLineSet.h  BuildLineUnknownDisplayForm.cpp  BuildLineUnknownDisplayForm.h  BuildRanlibLine.cpp  BuildRanlibLine.h  BuildSystem.cpp  BuildSystem.h  BuildSystemTree.cpp  (+115 more)
ASTSideBySide/: ASTSByS.pro  ASTSByS_resource.rc  BuildARLine.cpp  BuildARLine.h  BuildCompileLine.cpp  BuildCompileLine.h  BuildEchoLine.cpp  BuildElement.cpp  BuildElement.h  BuildElementSet.cpp  BuildElementSet.h  BuildForLine.cpp  BuildLine.cpp  BuildLine.h  BuildLineSet.cpp  BuildLineSet.h  BuildSystem.cpp  BuildSystem.h  BuildTree.cpp  BuildTree.h  BuildTreeContainer.cpp  BuildTreeContainer.h  BuildTreeItem.cpp  BuildTreeItem.h  BuildTreeItemComponent.cpp  BuildTreeItemComponent.h  BuildTreeItemSection.cpp  BuildTreeItemSection.h  BuildTreeItemSubSection.cpp  BuildTreeItemSubSection.h  BuildTreeItemTop.cpp  BuildTreeItemTop.h  CodeDisplay.cpp  CodeDisplay.h  CodeDisplayLine.cpp  CodeDisplayLine.h  CodeEditor.cpp  CodeEditor.h  CodeHighlighter.cpp  CodeTrack.cpp  (+54 more)
Doc/: TODO.txt
images/: CodeView.xcf  FunctionView.xcf
stdincludes/: assert.h  conio.h  ctype.h  endian.h  errno.h  fcntl.h  features.h  ioctl.h  limits.h  malloc.h  math.h  pwd.h  regex.h  sched.h  setjmp.h  siginfo.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdsys.h  string.h  unistd.h
stdincludes/arpa/: inet.h
stdincludes/bits/: pthreadtypes.h  setjmp.h  wordsize.h
stdincludes/netinet/: in.h
stdincludes/sys/: file.h  socket.h  stat.h  syscall.h  time.h  types.h
